--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js" defer></script>
     <title>Weather App</title>
   </head>
   <body>
@@ -48,5 +47,7 @@
         </div>
       </div>
     </div>
+    <script src="config.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
